# aikanojo

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  README.md  affinity.py  character.yaml  linter.py  main.py  memory.py  pyproject.toml  user_affinity.json  user_memory.json
config/: character.yaml  greetings.yaml  linter.yaml
docs/: character_generation_prompt.md
src/: __init__.py  affinity.py  character_prompt.py  linter.py  main.py  memory.py
src/bot/: __init__.py  main.py
src/core/: __init__.py  llm_client.py  prompt_builder.py
src/memory/: __init__.py  chroma_store.py  crag_evaluator.py  manager.py  yaml_store.py
tests/: conftest.py  test_affinity.py  test_character_prompt.py  test_crag.py  test_greetings.py  test_linter.py  test_memory.py
